@@ -13,6 +13,10 @@ Enhancements::
 * allow page margin for rotated page to be configured independently using `page-margin-rotated` theme key or `pdf-page-margin-rotated` document attribute (#1719)
 * don't force page break after TOC with automatic placement in article if `title-page` attribute is set and value of `toc-break-after` theme key is `auto` (#1768)
 
+Bug Fixes::
+
+* allow alt text for block image, video, and audio to wrap to next line on same page (#2258)
+
 == 2.1.3 (2022-06-23) - @mojavelinux
 
 Bug Fixes::
